--- a/WEB/package.json
+++ b/WEB/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "d3": "^5.9.2",
     "express": "^4.16.4",
-    "mongoose": "^5.4.22"
+    "mongoose": "^5.4.22",
+    "nodemon": "^1.18.10",
+    "path": "^0.12.7"
   }
 }
