--- a/WEB/package.json
+++ b/WEB/package.json
@@ -10,10 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "child_process": "^1.0.2",
     "d3": "^5.9.2",
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
-    "nodemon": "^1.18.10",
+    "nodemon": "^1.18.11",
     "path": "^0.12.7"
   }
 }
